Enable continue-on-error for build step
Allow the build step to continue on error for full features.

Signed-off-by: Xinyu Yang <pana.yang@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
       
       - name: Build with full features
         run: cargo clippy --features full --verbose
+        continue-on-error: true
 
       - name: Test with full features
         run: cargo test --features full --verbose
