--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build-test-bench-fmt-doc:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         toolchain: [stable, beta, nightly, 1.89.0]
