--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ exclude = [
     "docs/*",
     "certificates/*",
     "rssn.h",
-    "rssn.hpp"
+    "rssn.hpp",
 ]
 
 [lib]
@@ -60,6 +60,7 @@ debug = false
 [dependencies]
 uuid = { version = "1.19", features = ["v4"] }
 libc = { version = "0.2", optional = true }
+# Not upgrading because of argmin
 ndarray = { version = "0.16", features = ["serde"] }
 statrs = "0.18"
 argmin-math = { version = "0.5", features = [
@@ -83,7 +84,8 @@ uom = { version = "0.37", features = [
 bigdecimal = { version = "0.4", features = ["serde"] }
 special = "0.12"
 errorfunctions = "0.2"
-ndarray-npy = { version = "0.10", optional = true }
+# Not upgrading because of argmin requires ndarray 0.16
+ndarray-npy = { version = "0.9", optional = true }
 rayon = "1.11"
 bincode-next = { version = "2.0", features = ["serde"] }
 # NOTE: Both rand 0.8.5 and 0.9.2 are required.
@@ -103,7 +105,7 @@ dashmap = "6"
 once_cell = "1.21"
 lazy_static = "1.5"
 # Not updating nom for compatibility issues.
-nom = { version = "8.0", optional = true } 
+nom = { version = "8.0", optional = true }
 
 plotters = { version = "0.3", features = [
     "image",
