doc: remove goal as scipy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.3"
 edition = "2024"
 rust-version = "1.89.0"
 authors = ["The rssn developers"]
-description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
+description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy and SymPy."
 license = "Apache-2.0"
 repository = "https://github.com/Apich-Organization/rssn"
 homepage = "https://github.com/Apich-Organization/rssn"
