--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,8 +94,10 @@ bincode-next = { version = "2.0", features = ["serde"] }
 # NOTE: Both rand 0.8.5 and 0.9.2 are required.
 # `rand` 0.8.5 is used for compatibility with existing dependencies and safe upgrade path.
 # `rand_v09` (rand 0.9.2) is needed by INSERT DEPENDENCY.
-rand_v09 = { package = "rand", version = "0.9.2" }
-rand = "0.8.5"
+rand_v09 = { package = "rand", version = "0.9" }
+# `rand_v10` (rand 0.10.0) is needed by faer.
+rand_v10 = { package = "rand", version = "0.10" }
+rand = "0.8"
 ordered-float = { version = "5.1", features = ["serde"] }
 num-complex = { version = "0.4", features = ["serde"] }
 num-bigint = { version = "0.4", features = ["serde", "rand"] }
